kube/gin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-web
  namespace: backend-go
  labels:
    app: gin-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gin-web
  template:
    metadata:
      labels:
        app: gin-web
    spec:
      containers:
      - name: gin-web
        image: docker.io/library/gin_web:v1
        command: ["./main"]
        imagePullPolicy: Never
        ports:
          - containerPort: 8080
