kube/django-service.yml
kind: Service
apiVersion: v1
metadata:
  name: django-service
  namespace: backend-django
spec:
  selector:
    app: mk8sdjango
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
  # type: NodePort
