kube/gin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gin-service
  namespace: backend-go
spec:
  selector:
    app: gin-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
