kube/nginx-service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-server-service
  namespace: backend-django
spec:
  selector:
    app: nginx-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80  # required for static in django's admin
  type: ClusterIP
