kube/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: backend-django
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
     targetPort: 5432
  selector:
   app: postgres
