kube/gin-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: http-ingress
  namespace: backend-go
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /pbuf(/|$)(.*)  # skip `/pbuf` prefix internally
        pathType: Prefix
        backend:
          service:
            name: gin-service
            port:
              number: 80
